enabled php first attempt

--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,8 @@ upstream fastcgi_backend {
   server PHP_HOST:PHP_PORT;
 }
 
+
+
 server {
   listen 80;
   listen 443 ssl;
@@ -10,12 +12,19 @@ server {
   server_name localhost VIRTUAL_HOST;
 
   set $SHOP_ROOT /src;
+  
+  index index.php;
  
   root $SHOP_ROOT;
 
   
   location / {
     index /index.php;
+    
+    fastcgi_pass   fastcgi_backend;
+    fastcgi_index  index.php;
+    fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+    include    fastcgi_params;
     
     rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
     rewrite ^/([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$1$2.jpg last;
