enable php and prestashop settings in nxinx attempt 2

--- a/default.conf
+++ b/default.conf
@@ -1,45 +1,90 @@
 upstream fastcgi_backend {
-  server PHP_HOST:PHP_PORT;
+    server PHP_HOST:PHP_PORT;
 }
 
-
-
 server {
-  listen 80;
-  listen 443 ssl;
-  ssl_certificate CERTIFICATE_PATH;
-  ssl_certificate_key CERTIFICATE_KEY_PATH;
-  server_name localhost VIRTUAL_HOST;
+    listen 80;
+    listen 443 ssl;
+    ssl_certificate CERTIFICATE_PATH;
+    ssl_certificate_key CERTIFICATE_KEY_PATH;
+    server_name localhost VIRTUAL_HOST;
 
-  set $SHOP_ROOT /src;
-  
-  index index.php;
+    set $SHOP_ROOT /src;
+    
+    index index.php;
+    
+    root $SHOP_ROOT;
+
+    # Needed by the installer
+    location = /install/sandbox/anything.php { 
+        rewrite .* /install/sandbox/test.php last;
+    }
+
+    # Pass API requests to the webservice dispatcher
+    location ^~ /api/ {
+        rewrite ^/api/(.*) /webservice/dispatcher.php?url=$1 last;
+    }
+
+    # Block all files starting with ., like .htaccess
+    location ~ /\. {
+        deny all;
+    }
+
+    # Block all files with these extensions
+    location ~ \.(md|tpl)$ {
+        deny all;
+    }
+
+    # Directories explicitly allowed in directories blocked below
+    location ~ ^/docs/csv_import/ {
+        allow all;
+    }
+
+    # Block everything else in these directories
+    location ~ ^/(admin666/backups|admin666/export|admin666/import|admin666/tabs|classes|config|docs|download|install666|localization|log|override|tools|translations)/ {
+        deny all;
+    }
  
-  root $SHOP_ROOT;
+    location ~* \.(eot|gif|ico|jpg|jpeg|otf|pdf|png|svg|swf|ttf|woff)$ {
+        rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
+        rewrite ^/([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$1$2.jpg last;
+        rewrite ^/([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$1$2$3.jpg last;
+        rewrite ^/([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$1$2$3$4.jpg last;
+        rewrite ^/([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$1$2$3$4$5.jpg last;
+        rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$1$2$3$4$5$6.jpg last;
+        rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$1$2$3$4$5$6$7.jpg last;
+        rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$1$2$3$4$5$6$7$8.jpg last;
+        rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$8/$1$2$3$4$5$6$7$8$9.jpg last;
+        rewrite ^/c/([0-9]+)(-[_a-zA-Z0-9-]*)/[_a-zA-Z0-9-]*.jpg$ /img/c/$1$2.jpg last;
+        rewrite ^/c/([a-zA-Z-]+)/[a-zA-Z0-9-]+.jpg$ /img/c/$1.jpg last;
+        rewrite ^/([0-9]+)(-[_a-zA-Z0-9-]*)/[_a-zA-Z0-9-]*.jpg$ /img/c/$1$2.jpg last;
+        try_files $uri $uri/ /index.php?$args;
+    }
+    
+    # Block everything else in these directories
+    location ~ ^/img/cms/ {
+        deny all;
+    }
 
-  
-  location / {
-    index /index.php;
-    
-    fastcgi_pass   fastcgi_backend;
-    fastcgi_index  index.php;
-    fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-    include    fastcgi_params;
-    
-    rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
-    rewrite ^/([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$1$2.jpg last;
-    rewrite ^/([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$1$2$3.jpg last;
-    rewrite ^/([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$1$2$3$4.jpg last;
-    rewrite ^/([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$1$2$3$4$5.jpg last;
-    rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$1$2$3$4$5$6.jpg last;
-    rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$1$2$3$4$5$6$7.jpg last;
-    rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$1$2$3$4$5$6$7$8.jpg last;
-    rewrite ^/([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])([0-9])(-[_a-zA-Z0-9-]*)?/[_a-zA-Z0-9-]*.jpg$ /img/p/$1/$2/$3/$4/$5/$6/$7/$8/$1$2$3$4$5$6$7$8$9.jpg last;
-    rewrite ^/c/([0-9]+)(-[_a-zA-Z0-9-]*)/[_a-zA-Z0-9-]*.jpg$ /img/c/$1$2.jpg last;
-    rewrite ^/c/([a-zA-Z-]+)/[a-zA-Z0-9-]+.jpg$ /img/c/$1.jpg last;
-    rewrite ^/([0-9]+)(-[_a-zA-Z0-9-]*)/[_a-zA-Z0-9-]*.jpg$ /img/c/$1$2.jpg last;
-    try_files $uri $uri/ /index.php?$args;
-  }
+    # 1 week expiry on CSS and JavaScript
+    location ~ \.(css|js)$ {
+        expires 1w;
+        add_header Cache-Control public;
+        allow all;
+    }
+
+    # PHP
+    location ~ \.php$ {
+        fastcgi_pass   fastcgi_backend;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include    fastcgi_params;
+    }
+
+    # The rest is either served directly or passed on to the dispatcher
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 }
 
 
