removed SSH from default configuration

--- a/default.conf
+++ b/default.conf
@@ -4,9 +4,12 @@ upstream fastcgi_backend {
 
 server {
     listen 80;
-    listen 443 ssl;
-    ssl_certificate CERTIFICATE_PATH;
-    ssl_certificate_key CERTIFICATE_KEY_PATH;
+    
+    # Uncomment below to use certificates (please put in real paths CERTIFICATE_PATH and CERTIFICATE_KEY_PATH)
+    # listen 443 ssl;
+    # ssl_certificate CERTIFICATE_PATH;
+    # ssl_certificate_key CERTIFICATE_KEY_PATH;
+    
     server_name localhost VIRTUAL_HOST;
 
     set $SHOP_ROOT /src;
